<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />
        <import type="com.yangdroid.hierarchymemo.ui.main.MainPresenter.Mode" />
        <import type="com.yangdroid.hierarchymemo.ui.main.MainPresenter.MemoTypeToLoad" />

        <variable
            name="presenter"
            type="com.yangdroid.hierarchymemo.ui.main.MainPresenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <!--  Today  -->
        <TextView
            android:id="@+id/tv_main_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/colorNormal"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--  MemoTypeToLoad  -->
        <LinearLayout
            android:id="@+id/ll_main_select_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <LinearLayout
                android:id="@+id/ll_main_select_type_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:onClick="@{() -> presenter.changeTypeToProgress()}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/main_progress"
                    android:textColor="@color/colorNormal"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorOrange"
                    android:visibility="@{presenter.type == MemoTypeToLoad.PROGRESS ? View.VISIBLE : View.INVISIBLE}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:onClick="@{() -> presenter.changeTypeToCompleted()}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/main_completed"
                    android:textColor="@color/colorNormal"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorOrange"
                    android:visibility="@{presenter.type != MemoTypeToLoad.PROGRESS ? View.VISIBLE : View.INVISIBLE}"/>

            </LinearLayout>

        </LinearLayout>

        <!--  MemoList  -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_memo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/ll_main_select_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--  EditMode  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#A000"
            android:visibility="@{presenter.mode == Mode.EDIT ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv_main_edit_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:background="@android:color/black"
                    android:src="@drawable/ic_create_black_24dp"
                    android:tint="@color/colorNormal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/et_main_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@null"
                    android:textColor="@android:color/white"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_main_edit_write" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@null"
                android:gravity="end"
                app:layout_constraintBottom_toTopOf="@+id/cl_main_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:background="@null"
                    android:text="@string/main_template_title"
                    android:textSize="15dp"
                    android:textColor="@color/colorGreen" />

                <TextView
                    android:id="@+id/tv_main_template_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:background="@null"
                    android:text="@string/main_template_today_todo"
                    android:textSize="15dp"
                    android:textColor="@color/colorGreen" />

                <TextView
                    android:id="@+id/tv_main_template_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:background="@null"
                    android:text="@string/main_template_this_week_todo"
                    android:textSize="15dp"
                    android:textColor="@color/colorGreen" />

                <TextView
                    android:id="@+id/tv_main_template_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:background="@null"
                    android:text="@string/main_template_this_month_todo"
                    android:textSize="15dp"
                    android:textColor="@color/colorGreen" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_main_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_create_black_24dp"
            android:tint="@color/colorNormal"
            android:visibility="@{presenter.mode == Mode.NORMAL ? View.VISIBLE : View.GONE}"
            android:onClick="@{() -> presenter.changeModeToEdit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>